plugins {
    id 'application'
    id 'com.gradleup.shadow' version '9.6.1'
}

group = 'doggo'
version = '0.1.0'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

dependencies {
    implementation 'org.xerial:sqlite-jdbc:3.53.4.0'
    testImplementation platform('org.junit:junit-bom:6.1.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

application {
    mainClass = 'doggo.Doggo'
    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
}

test {
    useJUnitPlatform()
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}

shadowJar {
    archiveClassifier = ''
    manifest {
        attributes 'Main-Class': application.mainClass.get(),
                'Enable-Native-Access': 'ALL-UNNAMED'
    }
}
